--- a/css/main.css
+++ b/css/main.css
@@ -165,3 +165,44 @@ a:focus {
 .slide q strong {
     white-space: nowrap;
 }
+
+.mocha-logo {
+  font-family: "Helvetica Neue";
+  font-weight: 100;
+  font-size: 50px;
+  margin: 100px 0 0 70px;
+}  
+
+#mocha {
+  display: inline-block;
+  background-color: white;
+  color: white;
+  padding-top: 105px;
+  text-align: center;
+  width: 255px;
+  height: 150px;
+  opacity: 0;
+  border-radius: 50%;
+  transition: opacity 1s, background-color 200ms;
+  float: left;
+}
+
+.present #mocha {
+  background-color: #8a6343;
+  opacity: 1;
+}
+  
+#mocha-motto {
+  display: inline-block;
+  opacity: 0;
+  color: #c29d7f;
+  padding-top: 105px;
+  margin-left: 0;
+  letter-spacing: 2px;
+  transition: opacity 1s, margin-left 1s;
+}
+
+.present #mocha-motto {
+  opacity: 1;
+  margin-left: 60px;
+} 
